[package]
name = "t-rex"
version = "0.1.0"
edition = "2021"
authors = ["Sammy <sammy@stegabob.com>"]
repository = "https://github.com/stegaBOB/t-rex/"
license = "Apache-2.0"
description = "A script for inserting a new page in a number-indexed Docusaurus directory"

[[bin]]
name = "t-rex"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
anyhow = "1.0.58"
console = "0.15.0"
thiserror = "1.0.31"
glob = "0.3.0"
